--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -1,38 +1,13 @@
 <%- include('partials/header') -%>
-<!-- <div class="container">
-  <div class="mt-5">
-    <h2>Add a new review</h2>
-    <form action="/reviews/createReview" enctype="multipart/form-data" method="POST">
-      <div class="mb-3">
-          <label for="address" class="form-label">Property Address</label>
-          <input type="text" class="form-control" >
-      </div>
-      <div class="mb-3">
-        <label for="tenancyDuration" class="form-label">Dates of tenancy</label>
-        <input type="date" class="form-control" id="tenancyDuration" name="tenancyDuration"></textarea>
-      </div>
-      <div class="mb-3">
-        <label for="title" class="form-label">Review title</label>
-        <textarea class="form-control" id="title" name="title"></textarea>
-      </div>
-      <div class="mb-3">
-        <label for="reviewBody" class="form-label">Review</label>
-        <textarea class="form-control" id="reviewBody" name="reviewBody"></textarea>
-      </div>
-
-      <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
-    </form>
-  </div>
-</div> -->
 
 <div class="container mx-auto">
-<form class="w-full max-w-lg mx-auto" action="/reviews/createReview" enctype="multipart/form-data" method="POST">
+<form class="w-full max-w-lg mx-auto" action="/reviews/createReview" method="POST">
   <div class="flex  -mx-3 mb-6 justify-center">
     <div class="w-full px-3">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-property-address">
         Property address
       </label>
-      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full" id="address" name="address"/>
+      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full form-control" id="address" name="address"/>
     </div>
   </div>
   <div class="flex flex-wrap -mx-3 mb-6">
@@ -54,7 +29,7 @@
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="title">
         Review title
       </label>
-      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full" id="title" name="title"/>
+      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full form-control" id="title" name="title"/>
     </div>
   </div>
   <div class="flex flex-wrap -mx-3 mb-6">
@@ -62,13 +37,13 @@
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="body">
         Review body
       </label>
-      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full" id="body" name="body"/>
+      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full form-control" id="body" name="body"/>
     </div>
   </div>
-    <div class="flex flex-wrap -mx-3 mb-6">
-      <div class="w-full px-3">
-      <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
-      </div>
+  <div class="flex flex-wrap -mx-3 mb-6">
+    <div class="w-full px-3">
+    <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+  </div>
 </div>
 </form>
 
