--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,10 +32,13 @@
           <li class="mx-1"><a href="/feed">Feed</a></li>
           <li class="mx-1"><a href="/reviews">Create review</a></li>
           <!-- hide if logged in -->
+          <% if(user == undefined){ %>          
           <li class="mx-1"><a href="/signup">Sign up</a></li>
           <li class="mx-1"><a href="/login">Log in</a></li>
+          <% } else{ %> 
           <!-- hide if not logged in -->
           <li class="mx-1"><a href="/logout">Log out</a></li>
+          <% } %>
         </ul>
       </div>
       <!-- search bar -->
