--- a/public/style.css
+++ b/public/style.css
@@ -3135,6 +3135,11 @@ html {
   margin-right: 0.5rem;
 }
 
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -3203,6 +3208,10 @@ html {
   flex-basis: 25%;
 }
 
+.basis-1\/3 {
+  flex-basis: 33.333333%;
+}
+
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
@@ -3221,6 +3230,10 @@ html {
 
 .justify-end {
   justify-content: flex-end;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-evenly {
