--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,7 +11,7 @@
       </form>
     </div>
     <!-- user info -->
-    <div>
+    <div class="pb-4">
     <p><strong>User Name</strong>: <%= user.userName %></p>
     <p><strong>Email</strong>: <%= user.email %></p>
     <a href="/logout" class="col-3 btn btn-primary">Logout</a>
