--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -4,12 +4,14 @@
 
 <form class="w-full max-w-lg mx-auto" action="/reviews/createReview" enctype="multipart/form-data" method="POST">
   <div class="flex flex-wrap -mx-3 mb-6">
+    <!-- street name -->
     <div class="w-full md:w-2/3 px-3 mb-6 md:mb-0">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-property-address">
         Street name and number
       </label>
       <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full" id="streetName" name="streetName"/>
     </div>
+    <!-- postcode -->
     <div class="w-full md:w-1/3 px-3">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-property-address">
         Postcode
@@ -17,7 +19,7 @@
       <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full" id="postcode" name="postcode"/>
     </div>
   </div>
-  
+  <!-- tenancy to and from -->
   <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-tenancy-from">
@@ -32,6 +34,7 @@
       <input type="date" placeholder="Type here" class="input input-bordered input-primary w-full" id="tenancyTo" name="tenancyTo"/>
     </div>
   </div>
+  <!-- review title -->
   <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-full px-3">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="title">
@@ -40,6 +43,7 @@
       <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full form-control" id="title" name="title"/>
     </div>
   </div>
+  <!-- review body -->
   <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-full px-3">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="body">
@@ -48,6 +52,7 @@
       <textarea id="message" rows="4" placeholder="Type here" class="textarea input-bordered input-primary w-full form-control " id="body" name="body"></textarea>
     </div>
   </div>
+  <!-- img upload -->
   <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-full px-3">
       <div class="mb-3">
@@ -56,6 +61,7 @@
       </div>
     </div>
   </div>
+  <!-- submit -->
   <div class="flex flex-wrap -mx-3 my-6">
     <div class="w-full px-3">
     <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
