--- a/views/property.ejs
+++ b/views/property.ejs
@@ -32,7 +32,11 @@
     </div>
 </div>
 <% } %>
+<% if(user == undefined){ %>
 <h3 class="text-xl font-bold pb-2">Want to leave a review for this property? <a href="/login" class="underline underline-offset-4 text-primary-focus">Log in</a> or <a href="/signup" class="underline underline-offset-4 text-primary-focus">create an account</a> today.</h3>
+<% } else{ %> 
+  <h3 class="text-xl font-bold pb-2">Want to leave a review for this property? <a href="/reviews" class="underline underline-offset-4 text-primary-focus">Create a review</a> today.</h3>
+<% } %>
 </div>
 
 
