--- a/views/property.ejs
+++ b/views/property.ejs
@@ -3,7 +3,7 @@
 <!-- header -->
 <div> <!-- whole property div-->
     <div>
-        <h1 class="text-2xl font-bold"> <%= property.streetName%>, <%= property.postcode.toUpperCase()%></h1>
+        <h1 class="text-2xl font-bold"> <%= property.streetName%>, <%= property.postcode%></h1>
     </div>
 <!-- images in grid-->
 <div class="flex flex-col lg:flex-row justify-evenly py-4 my-4 gap-6">
