--- a/views/property.ejs
+++ b/views/property.ejs
@@ -6,7 +6,6 @@
         <h1 class="text-2xl font-bold"> <%= property.streetName%>, <%= property.postcode.toUpperCase()%></h1>
     </div>
 <!-- images in grid-->
-
 <div class="flex flex-col lg:flex-row justify-evenly py-4 my-4 gap-6">
   <% for(var i=0; i<review.length; i++) {%>
     <!-- image -->
@@ -21,12 +20,14 @@
 <% for(var i=0; i<review.length; i++) {%>
 <div class="border-2 border-primary-focus px-8 py-4 my-4"> <!-- outer review div-->
     <div class="pb-2"> <!-- posted by and tenancy dates-->
+      <p>Review posted by <%= review[i].user.userName%></p>
         <% if(review[i].tenancyFrom && review[i].tenancyTo != "") {%>
           <p>Tenancy from <%= review[i].tenancyFrom%> to <%= review[i].tenancyTo%></p>
         <% } %>
         <!--<img src="<%= review[i].image%>">-->
     </div>
-    <div> <!-- review title and body-->
+    <!-- review title and body-->
+    <div>
         <h1 class="text-2xl font-bold pb-2"><%= review[i].title%></h1>
         <p class="pt-2"><%= review[i].body%></p>
     </div>
